--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,11 +14,14 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v3
 
-      # Step 2: Set up Flutter
+    # Step 2: Set up Flutter
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: 'stable'
+          flutter-version: stable # Ensure "stable" refers to the Flutter channel, not a specific version
+          channel: stable         # Explicitly specify the Flutter release channel
+          architecture: x64       # Default architecture
+
 
       # Step 3: Install dependencies
       - name: Install dependencies
