--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,63 +1,31 @@
-name: Flutter CI/CD
+name: Flutter
 
 on:
+  # Runs this action when you push on master
   push:
-    branches:
-      - master
+    branches: [ "master" ]
 
 jobs:
-  flutter:
-    runs-on: ubuntu-latest
+  flutter_job:
+
+    # The machine, we can also use windows-latest or ubuntu-latest
+    # We are choosing macos-latest because we will be also building for iOS
+    runs-on: macos-latest
 
     steps:
-      # Step 1: Check out the code
-      - name: Check out code
-        uses: actions/checkout@v3
 
-      # Step 2: Set up Flutter (use a stable version that works)
-      - name: Set up Flutter
+      # Clones the project on the machine
+      - uses: actions/checkout@v4
+
+      # Installs flutter and related dependency on this machine
+      - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.13.6'  # Use a stable version known to work
-          channel: stable
-
-      # Step 3: Install dependencies
+          channel: 'stable'
+          # flutter-version: '3.16.8'
+          # ^ If you want to use a specific version of flutter
+      
+      # Fetches proj dependencies from pub
       - name: Install dependencies
         run: flutter pub get
-
-      # Step 4: Analyze code
-      - name: Analyze code
-        run: flutter analyze
-
-      # Step 5: Run test cases
-      - name: Run tests
-        run: |
-          flutter test --machine > tests.json
-          flutter test --coverage
-        continue-on-error: true # Continue even if some tests fail
-
-      # Step 6: Upload test result artifacts
-      - name: Upload test result artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          name: test-results
-          path: tests.json
-
-      # Step 7: Upload coverage report
-      - name: Upload coverage report
-        if: success()
-        uses: actions/upload-artifact@v3
-        with:
-          name: coverage-report
-          path: coverage/lcov.info
-
-      # Step 8: Build for Web
-      - name: Build Flutter Web
-        run: flutter build web --release
-
-      # Step 9: Upload Web Build
-      - name: Upload Web Build
-        uses: actions/upload-artifact@v3
-        with:
-          name: flutter-web-build
-          path: build/web
+          # ^ If you want to use a specific version of flutter
