--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,31 +1,25 @@
-name: Flutter
+name: Flutter CI/CD
 
 on:
-  # Runs this action when you push on master
   push:
-    branches: [ "master" ]
+    branches:
+      - master
 
 jobs:
-  flutter_job:
-
-    # The machine, we can also use windows-latest or ubuntu-latest
-    # We are choosing macos-latest because we will be also building for iOS
-    runs-on: macos-latest
+  flutter:
+    runs-on: ubuntu-latest
 
     steps:
+      # Step 1: Check out the code
+      - name: Check out code
+        uses: actions/checkout@v3
 
-      # Clones the project on the machine
-      - uses: actions/checkout@v4
-
-      # Installs flutter and related dependency on this machine
-      - name: Setup Flutter
+      # Step 2: Set up Flutter (use a stable version that works)
+      - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          channel: 'stable'
-          # flutter-version: '3.16.8'
-          # ^ If you want to use a specific version of flutter
-      
-      # Fetches proj dependencies from pub
+          channel: stable
+
+      # Step 3: Install dependencies
       - name: Install dependencies
         run: flutter pub get
-          # ^ If you want to use a specific version of flutter
