--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
 
       # Step 4: Analyze code
      # - name: Analyze code
-      #   run: flutter analyze
+      #   run: flutter analyze --verbose
 
       # Step 5: Run all tests and generate coverage report
       - name: Run all tests and generate coverage
