--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,8 +25,8 @@ jobs:
         run: flutter pub get
 
       # Step 4: Analyze code
-     # - name: Analyze code
-      #   run: flutter analyze --verbose
+      - name: Analyze code
+        run: flutter analyze --verbose
 
       # Step 5: Run all tests and generate coverage report
       - name: Run all tests and generate coverage
