--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,23 +24,24 @@ jobs:
       - name: Install dependencies
         run: flutter pub get
 
-      # Step 4: Analyze code
-      - name: Analyze code
-        run: flutter analyze --verbose
-
-      # Step 5: Run all tests and generate coverage report
-      - name: Run all tests and generate coverage
-        run: flutter test --coverage
+      # Step 4: Run Unit Tests
+      - name: Run Unit Tests
+        run: |
+          mkdir -p flutter-test-results
+          flutter test > flutter-test-results/results.txt
         continue-on-error: true
-        
-      # Step 6: Upload test result artifacts (JUnit-style)
-      - name: Upload test result artifacts
+
+      # Step 5: Collect and Upload Test Results
+      - name: Upload Test Results
+        if: always()
         uses: actions/upload-artifact@v3
         with:
-          name: test-results
-          path: result.json
+          name: flutter-test-results
+          path: flutter-test-results/results.txt
 
-      # Step 7: Upload coverage report
+      # Step 6: Generate and Upload Coverage Report
+      - name: Generate coverage report
+        run: flutter test --coverage
       - name: Upload coverage report
         if: success()
         uses: actions/upload-artifact@v3
