--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.13.0' # or 3.32.5 if needed
+          flutter-version: '3.22.5'
 
       - name: Install Flutter dependencies
         run: flutter pub get
