--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -51,20 +51,15 @@ jobs:
       - name: Install Snyk CLI
         run: npm install -g snyk
 
-      - name: Authenticate Snyk
-        run: snyk auth
+      - name: Run Snyk Scan and Save Report
+        run: |
+          snyk test --all-projects --severity-threshold=low | tee snyk-report.txt
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-
-      - name: Install Snyk Dart Plugin
-        run: snyk plugins install snyk-dart
-
-      - name: Run Snyk Dart Vulnerability Scan
-        run: snyk test --file=pubspec.yaml --all-projects | tee snyk_dart_report.txt
         continue-on-error: true
 
-      - name: Upload Snyk Dart Report
+      - name: Upload Snyk Report
         uses: actions/upload-artifact@v4
         with:
-          name: snyk-dart-report
-          path: snyk_dart_report.txt
+          name: snyk-report
+          path: snyk-report.txt
