--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -63,3 +63,26 @@ jobs:
         with:
           name: snyk-report
           path: snyk-report.txt
+
+      - name: Check Outdated Dependencies
+        run: dart pub outdated | tee dart_outdated.txt
+        continue-on-error: true
+
+      - name: Upload Dart Outdated Report
+        uses: actions/upload-artifact@v4
+        with:
+          name: dart-outdated
+          path: dart_outdated.txt
+
+      - name: Install Pana
+        run: dart pub global activate pana
+
+      - name: Run Pana Analysis
+        run: pana . | tee pana_report.txt
+        continue-on-error: true
+
+      - name: Upload Pana Report
+        uses: actions/upload-artifact@v4
+        with:
+          name: pana-report
+          path: pana_report.txt
